yiltc-v0.2-backup/testsuite/negative/arrow_closure.yilt
// Negative: arrow syntax on a closure (local function expression) is also rejected.
fn main()
    let f = fn(x int) -> int
        return x + 1
    print(f(10))
